# tevian_REST_task_manager

./: .envexample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mig.py  pyproject.toml  setup.cfg
task_manager/: app.py  main.py
task_manager/config/: base.py
task_manager/db/: db.py
task_manager/dto/: images.py  tasks.py
task_manager/exceptions/: custom_exceptions.py  tevian_exceptions.py
task_manager/faces/: dto.py  repository.py  routes.py  service.py
task_manager/images/: dto.py  models.py  repository.py  routes.py  service.py
task_manager/images_analyzers/: tevian.py
task_manager/migrations/: env.py  script.py.mako
task_manager/migrations/versions/: 26a06d5a4200_.py  64ab07254ada_.py  6b05f071d666_.py  7729bf64a440_.py  a4afd65fc9de_.py  afe08ab91bff_.py  b7440b08a2e9_.py  cca2f66becf3_.py
task_manager/models/: faces.py  images.py  tasks.py
task_manager/repositories/: faces.py  images.py  tasks.py
task_manager/routes/: faces_routes.py  images_routes.py  tasks_routes.py
task_manager/schemas/: faces.py  images.py  tasks.py
task_manager/services/: faces.py  file_operator.py  images.py  statistic.py  tasks.py  tevian.py
task_manager/statistic/: task_statistic.py
task_manager/tasks/: dto.py  models.py  repository.py  routes.py  schemas.py  service.py
task_manager/utils/: repository.py  services.py
tests/: conftest.py
