[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["rudich <rudi4.clarinet@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg-binary = "^3.2.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
marshmallow = "^3.22.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
flask-httpauth = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
